WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193761
Regression(PSON) Back/Forward list items' URL sometimes gets replaced with the URL of a subframe
https://bugs.webkit.org/show_bug.cgi?id=193761
Summary
Regression(PSON) Back/Forward list items' URL sometimes gets replaced with th...
Chris Dumez
Reported
2019-01-23 21:38:10 PST
Back/Forward list items' URL sometimes gets replaced with the URL of a subframe when PSON is enabled.
Attachments
Patch
(7.95 KB, patch)
2019-01-23 21:54 PST
,
Chris Dumez
achristensen
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-01-23 21:38:28 PST
<
rdar://problem/47456405
>
Chris Dumez
Comment 2
2019-01-23 21:54:45 PST
Created
attachment 359994
[details]
Patch
EWS Watchlist
Comment 3
2019-01-23 21:57:08 PST
Attachment 359994
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2066: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] ERROR: Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:2071: Multi-line string ("...") found. This lint script doesn't do well with such strings, and may give bogus warnings. They're ugly and unnecessary, and you should use concatenation instead". [readability/multiline_string] [5] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 4
2019-01-24 10:24:18 PST
Comment on
attachment 359994
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=359994&action=review
> Tools/ChangeLog:9 > + Add layout test coverage.
API
Chris Dumez
Comment 5
2019-01-24 10:30:48 PST
Committed
r240442
: <
https://trac.webkit.org/changeset/240442
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug